# autonomous-vision-bdd100k

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker_requirements.txt  pyproject.toml
docs/: 01_data_analysis.md  02_model_selection.md  03_model_analysis.md
notebooks/: 01_CustomLoader_FasterRCNN.ipynb  02_YOLO_QuantitativeAnalysis.ipynb  03_YOLO_QualitativeAnalysis.ipynb  test.ipynb
notebooks/DataAnalysis/: 02_BDD100k_Analysis.ipynb
scripts/: gpu_check.py  img2video.py  sanity_check.py
src/autonomous_vision/: config.py
src/autonomous_vision/data_analysis/: bdd_to_coco.py  data_parser.py  parser_core.py
src/autonomous_vision/data_parser/: parsing_logic.py
src/autonomous_vision/object_detection/: data_loader.py  label_utils.py  train_yolo.py  yolo_overlay.py
src/autonomous_vision/utils/: helper.py  schemas.py
