[project]
name = "autonomous-vision-bdd100k"
version = "0.1.0"
description = "End-to-end object detection pipeline using BDD100k dataset for autonomous vision"
authors = [{ name = "Anish Navalgund", email = "anishk.navalgund@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "torch>=2.7.0,<3.0.0",
    "torchvision>=0.22.0,<0.23.0",
    "torchaudio>=2.7.0,<3.0.0",
    "matplotlib>=3.10.5",
    "pillow>=11.3.0",
    "plotnine>=0.15.0",
    "plotly>=6.2.0",
    "opencv-python>=4.12.0.88",
    "easyimages>=1.91",
    "pydantic>=2.11.7",
    "pandas>=2.3.1",
    "pydantic-settings>=2.10.1",
    "pyarrow>=21.0.0",
    "pyyaml>=6.0.2",
    "ultralytics==8.3.162",
    "mlflow>=3.2.0",
    "streamlit>=1.48.0",
    "fiftyone>=1.7.2",
    "seaborn>=0.13.2",
    "matplotlib-venn>=1.1.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "black",
    "pylint",
    "isort",
    "jupyter",
    "pre-commit>=4.2.0",
    "flake8>=7.3.0",
]

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["src"]
known_first_party = ["autonomous_vision"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# disable doc strings for now
[tool.pylint.'MESSAGES CONTROL']
disable = [
    "C0114", #  module 
    "C0115", #  class 
    "C0116", #  function 
    "R0911", #  too-many-return-statements
    "R0912", #  too-many-branches
    "R0914", #  too-many-locals
    "R0915", #  too-many-statements
    "R0913", #  too-many-arguements
    "R0917", #  too-many-positional-arguements
    "E1101",
]

[tool.pylint.format]
max-line-length = 79
